tests/baselines/reference/declarationEmitClassMemberNameConflict(strict=true).errors.txt
declarationEmitClassMemberNameConflict.ts(29,9): error TS7032: Property 'C4' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
declarationEmitClassMemberNameConflict.ts(29,12): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== declarationEmitClassMemberNameConflict.ts (2 errors) ====
    export class C1 {
        C1() { } // has to be the same as the class name
    
        bar() {
            return function (t: typeof C1) {
            };
        }
    }
    
    export class C2 {
        C2: any // has to be the same as the class name
    
        bar() {
            return function (t: typeof C2) {
            };
        }
    }
    
    export class C3 {
        get C3() { return 0; } // has to be the same as the class name
    
        bar() {
            return function (t: typeof C3) {
            };
        }
    }
    
    export class C4 {
        set C4(v) { } // has to be the same as the class name
            ~~
!!! error TS7032: Property 'C4' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
               ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    
        bar() {
            return function (t: typeof C4) {
            };
        }
    }